fix: fix html routes with image visibility issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,7 +243,7 @@ nav > .wrapper {
 }
 
 nav form {
-	width: 80%;
+	width: 50%;
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
@@ -251,7 +251,7 @@ nav form {
 
 nav input[type="text"] {
 	width: 100%;
-	margin-right: 1rem;
+	margin-right: .25rem;
 	flex-shrink: 2;
 	min-width: 150px;
 }
